# emergencyRoom

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/structures/: list.h  priority_queue.h  queue.h  stack.h  tree.h
include/systems/: patient.h  patient_system.h
src/: main.c
src/structures/: list.c  priority_queue.c  queue.c  stack.c  tree.c
src/systems/: patient.c  patient_system.c
src/ui/: layout.h  main_view.c  main_view.h  right_panel.c  right_panel.h  sidebar.c  sidebar.h  text.c  text.h  topbar.c  topbar.h
